--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: release
 
 on:
   push:
+    branches:
+      - main
     tags:
       - "v*"
 
@@ -49,7 +51,7 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
           CGO_ENABLED: 0
-          VERSION: ${{ github.ref_name }}
+          VERSION: ${{ startsWith(github.ref, 'refs/tags/v') && github.ref_name || format('main-{0}', github.sha) }}
         run: |
           mkdir -p dist
           BIN_NAME="xpostctl-${GOOS}-${GOARCH}${{ matrix.ext }}"
@@ -88,7 +90,19 @@ jobs:
           path: release-artifacts
           merge-multiple: true
 
-      - name: publish-release
+      - name: publish-latest-prerelease
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: latest
+          name: latest
+          files: release-artifacts/*
+          draft: false
+          prerelease: true
+          fail_on_unmatched_files: true
+
+      - name: publish-version-release
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
           files: release-artifacts/*
